# griptape-maya

./: .gitignore  README.md  griptape-maya.mod  install.py  pyproject.toml  requirements.txt
src/scripts/: userSetup.py
src/scripts/griptape_tools/: api_keys.py  audio.py  audio_recorder.py  chatbot.py  core.py  maya_audio_recorder.py  maya_audio_ui.py  maya_tool.py  menu.py  test_tool.py
